--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.css";
+
+html{
+  height: 100%;
+}
+
+body{
+    font-family: 'Lato', sans-serif;
+    color: rgb(15, 15, 15);
+    background-color: #0b8339;
+    height: 100%;
+  }
+  
+  .main-content{
+    padding-top: 60px;
+    color: #333;
+  }
+  
+  h1 h2 h3 h4 h5{
+    font-family: 'Monteserrat', sans-serif;
+    color: #333;
+  }
